<resources>
    <string name="app_name">SingleAlbumApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="play">Play</string>
    <string name="song_title">Song title</string>
    <string name="artist_name">Artist name</string>
    <string name="album">АЛЬБОМ</string>
    <string name="artist">Artist:</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
</resources>